--- a/index.html
+++ b/index.html
@@ -19,6 +19,31 @@
                 <a href="">АВТОРИЗУЙТЕСЬ</a>
             </div>
         </nav>
+        <div class="block1">
+            <div class="text">
+                <h2>Организуй праздник сам!</h2>
+                <p>Найди проверенных людей для своего праздника</p>
+            </div>
+            <img src="./5 (1).png" alt="" class="img1">
+        </div>
     </header>
+    <div class="about">
+        <div class="block2">
+            <img src="./img2.png" alt="" class="img2">
+            <div class="text2">
+                <h2 class="inner1">Еasyfest дает возможность сэкономитьвремя для организации Вашего незабываемого праздника</h2>
+                <p class="inner2">
+                    Для Вас мы стараемся  тщательно отбирать 
+                    надежных и проверенных исполнителей.
+                    Ежедневно отслеживая недобросовестных 
+                    и некомпетентных поставщиков услуг.  
+                </p>
+                <p class="inner3">
+                    Нам Вы можете легко доверить любой праздник!
+                </p>
+            </div>
+            <img class="img3" src="./gif.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
